--- a/resources/admin/components/OnboardingWizard.scss
+++ b/resources/admin/components/OnboardingWizard.scss
@@ -10,7 +10,7 @@
 	}
 }
 
-.onboarding-wizard {
+.sf-onboarding-wizard {
 	padding: 1.5rem;
 
 	&__progress {
