--- a/resources/admin/components/SubmissionsTable.scss
+++ b/resources/admin/components/SubmissionsTable.scss
@@ -6,7 +6,7 @@
  * Layout: Must work in both page and builder contexts
  */
 
-.submissions-table {
+.sf-submissions-table {
 	display: flex;
 	flex-direction: column;
 	height: 100%;
